# report_printer

./: Cargo.toml
.github/workflows/: sync.yml
examples/: report_printer.rs  reporter.rs
src/: builder.rs  find_iter.rs  lib.rs  main.rs
src/printer/: builder.rs  carets.rs  mod.rs  segments.rs  underbar.rs
token/: Cargo.toml
token/src/: colors_chars.rs  lib.rs  multiline_stream.rs  saturating.rs  single_line_stream.rs  token.rs  token_stream.rs
token_macro/: Cargo.toml
token_macro/src/: lib.rs
