[package]
    edition = "2024"
    name    = "reporter"
    version = "1.1.0"

[features]
    default = []
    colored_carets = []

[dependencies]
    derive_more = { version = "2.0.1", features = [
        "display",
        "from",
        "into",
        "into_iterator",
    ] }
    itertools = "0.14.0"
    paste = "1.0.15"
    thiserror = "2.0.16"
    token = { path = "./token" }

[lib]
    name = "reporter"
    path = "src/lib.rs"

[[example]]
    name = "reporter"
    path = "examples/reporter.rs"
