[package]
    edition = "2024"
    name    = "reporter"
    version = "1.1.0"

[features]
    debug = ["caret_color", "merge_overlap"]
    # Enable the use of color in the arrows and carets
    caret_color = []
    # Enable saturating arithmetic for all arithmetic operations.
    # This crate is tested extensively with this feature disabled
    # but it is recommended to enable it in production builds
    saturating_arithmetic = ["token/saturating_arithmetic"]
    # Enable merging of overlapping labels.
    # Its not recommended to enable this feature,
    # as having overlapping labels
    # reduces readability tremendously
    # and it is better to just avoid creating them in the first place
    merge_overlap = []
    # Enable merging of adjacent tokens
    # during creation and further during formatting.
    # This is a very niche feature and does not provide much benefit.
    # It is mainly useful for reducing the number of tokens
    # at the cost of some performance
    merging_tokens = ["token/merging_tokens"]

[dependencies]
    derive_more = { version = "2.0.1", features = [
        "display",
        "from",
        "into",
        "into_iterator",
    ] }
    itertools = "0.14.0"
    paste = "1.0.15"
    thiserror = "2.0.16"
    token = { path = "./token" }

[lib]
    name = "reporter"
    path = "src/lib.rs"

[[example]]
    name = "reporter"
    path = "examples/reporter.rs"
