[package]
    edition = "2024"
    name    = "token"
    version = "1.0.0"

[dependencies]
    derive_more = { version = "2.0.1", features = [
        "display",
        "from",
        "into",
        "into_iterator",
    ] }
    itertools = "0.14.0"
    stringzilla = "4.0.10"

[dependencies.delegate]
    git = "https://github.com/DasBossGit/rust-delegate.git"

[dependencies.misc]
    features = [
        "bool",
        "option",
        "result",
    ]
    git = "https://github.com/DasBossGit/misc.git"

[lib]
    path       = "src/lib.rs"
    proc-macro = false

[features]
    saturating_arithmetic = []
